# Kahoot-Replica-Trivia-Game-

./: README.md  main.py
etc/: test.py
final-project-gwen-jesse/: README.md  pyproject.toml  replit.nix
final-project-gwen-jesse/etc/: dictionary.py  milestone2.md
final-project-gwen-jesse/src/: controller.py
src/: __init__.py  constants.py  questions.py
