[tool.poetry]
name = "repl_nix_final-project-gwen-jesse"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
modules = "^1.0.0"
cfg-manager = "^1.1.6"
auto-mix-prep = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
